add inspect
